# AudioCaptureCpp

./: .gitignore  AudioCapture.vcxproj  BUILD.md  CMakeLists.txt  README.md  audio_capture.cpp  audio_capture.h  audio_data_debug.txt  audio_devices_capture_debug.txt  audio_devices_render_debug.txt  capture_debug.txt  error_log.txt  init_debug.txt  main.cpp
